[tool.poetry]
name = "hello-bark"
version = "0.1.0"
description = ""
authors = ["tamakiii <tamakiii@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
suno-bark = {git = "https://github.com/suno-ai/bark.git"}
ipython = "^8.12.0"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
